# libmpsse

./: CMakeLists.txt  run_clang_format.sh
src/: configure  fast.c  mpsse.c  mpsse.h  support.c  support.h
src/examples/: bitbang.c  ds1305.c  gpio.c  i2ceeprom.c  spiflash.c  spiflashfast.c
